works page fix aligning

--- a/src/assets/styles/pages/works.scss
+++ b/src/assets/styles/pages/works.scss
@@ -58,6 +58,7 @@
     &__content {
       display: flex;
       flex-direction: column;
+      align-items: center;
       justify-content: center;
       width: 100%;
     }
